<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorGray"
    tools:context=".AfterOTP">

    <include
        android:id="@+id/include"
        layout="@layout/header_logo" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="4dp">

            <TextView
                android:id="@+id/Otp_tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/grazie_per_aver_scelto_elena_nprima_di_poter_procedere_ndevi_confermare_la_tua_e_mail"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:textSize="@dimen/PrimaryTextSize"
                android:gravity="center"
                android:layout_marginTop="@dimen/otp_Tv_txt_top_margin"/>

            <TextView
                android:id="@+id/Otp_tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Otp_tv1"
                android:text="@string/prima_di_poter_procedere"
                android:textColor="@color/black"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:fontFamily="sans-serif-medium"
                android:textSize="@dimen/PrimaryTextSize"
                android:gravity="center"
                android:layout_marginTop="@dimen/otp_Tv_txt_top_margin"/>

            <TextView
                android:id="@+id/Otp_tv3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Otp_tv2"
                android:text="@string/devi_confermare_la_tua_e_mail"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:textSize="@dimen/PrimaryTextSize"
                android:gravity="center"
                android:layout_marginTop="@dimen/otp_Tv_txt_top_margin"/>


            <EditText
                android:id="@+id/email_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/PrimaryTextSize"
                android:inputType="number"
                android:backgroundTint="@color/PrimaryOrange"
                android:layout_marginTop="@dimen/After_otp_Edt_margin_top"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_centerHorizontal="true"
                android:minWidth="@dimen/Edt_min_width"
                android:layout_below="@id/Otp_tv3"/>

            <ImageView
                android:id="@+id/mail_icon"
                android:layout_width="@dimen/mail_icon_height"
                android:layout_height="@dimen/mail_icon_width"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/otp_Tv_txt_top_margin"
                android:src="@drawable/mailicon"
                android:layout_below="@id/email_tv"/>

            <TextView
                android:id="@+id/aspetta_qualche_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mail_icon"
                android:text="aspetta qualche secondo e pol conferma"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:textSize="@dimen/PrimaryTextSize"
                android:gravity="center"
                android:layout_marginTop="@dimen/otp_Tv_txt_top_margin"/>




            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirm_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/aspetta_qualche_txt"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:backgroundTint="@color/PrimaryOrange"
                app:backgroundTint="@color/PrimaryOrange"
                android:text="@string/confirm"
                app:cornerRadius="12dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/PrimaryTextSize"
                android:layout_marginRight="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="@dimen/After_otp_confirm_top"/>

            <TextView
                android:id="@+id/ConditionTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/logout_btn"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:textSize="@dimen/SecondaryTextSize"
                android:layout_marginEnd="16dp"
                android:text="@string/per_farover_guarda_anche_nella_cartello_dello_spam_se_la_mail_non_arriva_contattaci_saremo_felici_di_aiutari"
                android:layout_marginStart="16dp"/>

            <Button
                android:id="@+id/logout_btn"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/logout"
                android:layout_marginRight="16dp"
                android:textSize="@dimen/Logout_btn_text_size"
                android:layout_alignParentBottom="true"
                android:textAllCaps="false"
                android:textColor="@color/PrimaryOrange"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="@dimen/Logout_btn_bottom_margin"
                android:background="@android:color/transparent"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>